@@ -60,7 +60,7 @@ public class CreateGff4PhenotypicVariants {
 
         String gffFile = fileName + " Phenotypic Alleles Variants.gff3";
 
-        Gff3ColumnWriter gff3Writer = new Gff3ColumnWriter(gffFile, false, info.getCompressMode());
+        Gff3ColumnWriter gff3Writer = new Gff3ColumnWriter(gffFile, info.getCompressMode());
 
         SequenceRegionWatcher sequenceRegionWatcher = new SequenceRegionWatcher(info.getMapKey(), gff3Writer, dao);
 
